finally got Postgres SQL working. AI completely hosed me over. I gave it free reign and reign freely it did.